blockml/test/valid/13_filter_expressions/v37/v37_one.view
view: v37_one
table: 1
fields:

- time: created
  timeframes:
  - time
  sql: 111

- dimension: dim6
  sql: 600


