blockml/test/errors/05_join/e39/e39_two.view
view: e39_two
table: 2
fields:
- dimension: d1
  sql: d1